force-app/main/default/objects/custom_create186__c/custom_create186__c.object-meta.xml
<CustomObject>
    <label>Custom created object186</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects186</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>