force-app/main/default/objects/custom_create186__c/fields/custom_create_186field512__c.field-meta.xml
<CustomField>
    <fullName>custom_create_186field512__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 186field512</label>
    <type>Checkbox</type>
</CustomField>